Exercise-07-ALB-Ingress-Failure/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: payment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: payment

  template:
    metadata:
      labels:
        app: payment

    spec:
      containers:
      - name: payment

        image: nginx

        ports:
        - containerPort: 80
